--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -12,7 +12,7 @@
     align-items: center;
     flex-direction: column;
     background: linear-gradient(to left, #0f0c29, #302b63, #24243e);
-    border: 1px solid black;
+    border: 1px solid #000;
     border-radius: 15px;
     box-shadow: 0px 0px 8px 2px rgba(255, 255, 255, 0.2);
 }
