--- a/src/components/Rank/Rank.css
+++ b/src/components/Rank/Rank.css
@@ -1,10 +1,10 @@
-.wrapper{
+.rank-container{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-top: 5rem;
-    margin-bottom: 5rem;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
 }
 .name-container {
   font-size: 2.5rem;  
