--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 /*Custom fonts*/
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
+/*Global styles*/
 * {
     font-family: 'Roboto Mono', monospace;
 }
@@ -13,5 +14,5 @@ body {
     margin: 0;
     color: #f6f2e3;
     padding: 0;
-    background: linear-gradient(to right, #0f0c29, #302b63, #24243e);
+    background: linear-gradient(to right, #2a5470, #2c5175, #334d78, #3f4779, #4c4177);
 }
