--- a/src/components/FaceRecognition/FaceRecognition.css
+++ b/src/components/FaceRecognition/FaceRecognition.css
@@ -21,6 +21,5 @@
     flex-wrap: wrap;
     position: absolute;
     cursor: pointer;
-    box-shadow: 0 0 0 3px #149df2 inset;
-    z-index: 5;
+    box-shadow: 0 0 0 3px #5ae832 inset;
 }
