Added server and connected to front-end

--- a/src/components/ImageInput/ImageInput.css
+++ b/src/components/ImageInput/ImageInput.css
@@ -1,3 +1,8 @@
+.description {
+    font-size: 40;
+    margin-bottom: 10;
+}
+
 .interactives-container {
     display: flex;
     justify-content: center;
