--- a/src/components/FaceRecognition/FaceRecognition.css
+++ b/src/components/FaceRecognition/FaceRecognition.css
@@ -5,7 +5,7 @@
 }
 
 .image-container{
-    position: absolute;
+    position: relative;
     margin-top: 2rem;
     margin-bottom: 3rem;
 }
@@ -21,5 +21,5 @@
     flex-wrap: wrap;
     position: absolute;
     cursor: pointer;
-    box-shadow: 0 0 0 3px #5ae832 inset;
+    border: 3px solid #5ae832;
 }
