--- a/src/components/Signin/Signin.css
+++ b/src/components/Signin/Signin.css
@@ -62,6 +62,13 @@ p:hover {
 
 /*classNames styles*/
 
+.wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
 .card-border {
     border: 1px solid #00000096;
     border-radius: 15px;
